syntax = "proto3";
package matchproto;

import "msgenum.proto";
option go_package = "./";

message ConnectMsg{
  string ip = 1;
  int32 port =2;
}

message RoomMsg{
  int32 id = 1;
  int32 status = 2;
  int64 createTime = 3;
  int32 playerCount = 4;
  int32 highestScore = 5;
}